added new version of the app